--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
 		"php": "^7.0",
-        "laravel/framework": "^6.0",
+        "laravel/framework": "^5.5 || ^6.0",
         "tmilos/scim-schema": "^0.1.0",
         "tmilos/scim-filter-parser": "^1.3"
     },
