--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
         }
     ],
     "require": {
-		"php": "^7.0",
-        "laravel/framework": "^5.5 || ^6.0",
+		"php": "^7.0|^8.0",
+        "illuminate/database": "^6.0|^7.0|^8.0",
+        "illuminate/support": "^6.0|^7.0|^8.0",
+        "illuminate/console": "^6.0|^7.0|^8.0",
         "tmilos/scim-schema": "^0.1.0",
         "tmilos/scim-filter-parser": "^1.3"
     },
