--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,4 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: php-actions/composer@v1
-    - uses: php-actions/phpunit@v2
-      with:
-        config: phpunit.xml
+    - uses: pxgamer/phpunit-action@master
