--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,4 +9,5 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: php-actions/composer@v1
-    - uses: pxgamer/phpunit-action@master
+    - name: Clean install dependencies and build
+      run: make phpunit
