--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,4 +10,6 @@ jobs:
     - uses: actions/checkout@v1
     - uses: php-actions/composer@v1
     - name: Clean install dependencies and build
-      run: make phpunit
+      run: |
+        php artisan cache:clear &&
+        make phpunit
