--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - uses: php-actions/composer@v6
-    - name: Clean install dependencies and build
-      run: |
-        make phpunit
+      with:
+        command: make phpunit
