--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: php-actions/composer@v6
-    - name: Run phpunit
-      run: |
-        ./vendor/bin/phpunit
+    - uses: php-actions/phpunit@v3
