--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,4 +9,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: php-actions/composer@v6
-    - uses: php-actions/phpunit@v3
+    - name: Run phpunit
+      run: |
+        ls -all vendor/orchestra/testbench-core/laravel/bootstrap/cache
+        sh -c "phpunit"
