--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - uses: php-actions/composer@v1
-    - uses: pxgamer/phpunit-action@master
+    - uses: actions/checkout@v2
+    - uses: php-actions/composer@v6
+    - uses: php-actions/phpunit@v3
+      with:
+        php_version: 7.4
