--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: php-actions/composer@v6
+      with:
+        php_version: 9
     - uses: php-actions/phpunit@v3
       with:
-        php_version: 9.0
+        php_version: 9
