set phpunit version to 9.5

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ jobs:
     - uses: php-actions/composer@v6
       with:
         php_version: 8
-    - uses: php-actions/phpunit@v3.0.0
+    - uses: php-actions/phpunit@v3
       with:
         php_version: 8
+        version: 9.5
