--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         php: [7.3, 7.4, 8.0, 8.1, 8.2]
-        laravel: [6.*, 7.*, 8.*, 9.*, 10.*]
+        laravel: [6.*, 7.*, 8.*, 9.*, 10.*, 11.*]
         exclude:
           - laravel: 6.*
             php: 8.1
@@ -29,6 +29,14 @@ jobs:
             php: 7.4
           - laravel: 10.*
             php: 8.0
+          - laravel: 11.*
+            php: 7.3
+          - laravel: 11.*
+            php: 7.4
+          - laravel: 11.*
+            php: 8.0
+          - laravel: 11.*
+            php: 8.1
 
     name: PHP ${{ matrix.php }} on Laravel ${{ matrix.laravel }}
 
