--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,12 +9,8 @@ jobs:
     strategy:
       matrix:
         php: [7.3, 7.4, 8.0, 8.1, 8.2]
-        laravel: [6.*, 7.*, 8.*, 9.*, 10.*, 11.*]
+        laravel: [7.*, 8.*, 9.*, 10.*, 11.*]
         exclude:
-          - laravel: 6.*
-            php: 8.1
-          - laravel: 6.*
-            php: 8.2
           - laravel: 7.*
             php: 8.1
           - laravel: 7.*
