--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,13 @@
         }
     ],
     "require": {
-		"php": "^7.0|^8.0",
+		"php": "^^8.0",
         "illuminate/database": "^7.0|^8.0|^9.0|^10.0|^11.0",
         "illuminate/support": "^7.0|^8.0|^9.0|^10.0|^11.0",
         "illuminate/console": "^7.0|^8.0|^9.0|^10.0|^11.0",
         "tmilos/scim-schema": "^0.1.0",
-        "tmilos/scim-filter-parser": "^1.3"
+        "tmilos/scim-filter-parser": "^1.3",
+        "cloudstek/scim-filter-parser": "^3.0"
     },
     "classmap": [
         "database/migrations"
