--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-		"php": "^7.0|^8.0",
+		"php": "^8.0",
         "illuminate/database": "^7.0|^8.0|^9.0|^10.0|^11.0",
         "illuminate/support": "^7.0|^8.0|^9.0|^10.0|^11.0",
         "illuminate/console": "^7.0|^8.0|^9.0|^10.0|^11.0",
