--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         }
     },
     "require-dev": {
-        "orchestra/testbench": "^4.0|^5.0|^6.0|^8.0|^9.0",
+        "orchestra/testbench": "^5.0|^6.0|^8.0|^9.0",
         "laravel/legacy-factories": "*"
     },
 
