--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,11 +8,17 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        php: [8.1, 8.2]
+        php: [8.0, 8.1, 8.2]
         laravel: [8.*, 9.*, 10.*, 11.*]
         exclude:
+          - laravel: 8.*
+            php: 8.2
           - laravel: 10.*
             php: 8.0
+          - laravel: 11.*
+            php: 7.3
+          - laravel: 11.*
+            php: 7.4
           - laravel: 11.*
             php: 8.0
           - laravel: 11.*
