--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,20 +9,10 @@ jobs:
     strategy:
       matrix:
         php: [8.0, 8.1, 8.2]
-        laravel: [7.*, 8.*, 9.*, 10.*, 11.*]
+        laravel: [8.*, 9.*, 10.*, 11.*]
         exclude:
-          - laravel: 7.*
-            php: 8.1
-          - laravel: 7.*
+          - laravel: 8.*
             php: 8.2
-          - laravel: 9.*
-            php: 7.3
-          - laravel: 9.*
-            php: 7.4
-          - laravel: 10.*
-            php: 7.3
-          - laravel: 10.*
-            php: 7.4
           - laravel: 10.*
             php: 8.0
           - laravel: 11.*
