--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         php: [8.0, 8.1, 8.2]
-        laravel: [8.*, 9.*, 10.*, 11.*]
+        laravel: [8.*, 9.*, 10.*, 11.*, 12.*]
         exclude:
           - laravel: 8.*
             php: 8.2
@@ -22,6 +22,14 @@ jobs:
           - laravel: 11.*
             php: 8.0
           - laravel: 11.*
+            php: 8.1
+          - laravel: 12.*
+            php: 7.3
+          - laravel: 12.*
+            php: 7.4
+          - laravel: 12.*
+            php: 8.0
+          - laravel: 12.*
             php: 8.1
 
     name: PHP ${{ matrix.php }} on Laravel ${{ matrix.laravel }}
