--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
         }
     ],
     "require": {
-		"php": "^8.0",
-        "illuminate/database": "^8.0|^9.0|^10.0|^11.0|^12.0",
-        "illuminate/support": "^8.0|^9.0|^10.0|^11.0|^12.0",
-        "illuminate/console": "^8.0|^9.0|^10.0|^11.0|^12.0",
+		"php": "^8.4",
+        "illuminate/database": "^12.0",
+        "illuminate/support": "^12.0",
+        "illuminate/console": "^12.0",
         "tmilos/scim-schema": "^0.1.0",
         "tmilos/scim-filter-parser": "^1.3"
     },
@@ -21,7 +21,9 @@
         "database/migrations"
     ],
     "autoload": {
-        "psr-4": {"ArieTimmerman\\Laravel\\SCIMServer\\": "src/"}
+        "psr-4": {
+          "ArieTimmerman\\Laravel\\SCIMServer\\": "src/"
+        }
     },
     "autoload-dev": {
         "psr-4": {
