--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     },
     "require-dev": {
         "orchestra/testbench": "^6.0|^7.0|^8.0|^9.0|^10.0",
-        "laravel/legacy-factories": "*"
+        "laravel/legacy-factories": "*",
+        "friendsofphp/php-cs-fixer": "^3.66"
     },
 
     "extra": {
