--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,8 @@ jobs:
     strategy:
       matrix:
         php: [8.0, 8.1, 8.2]
-        laravel: [8.*, 9.*, 10.*, 11.*, 12.*]
+        laravel: [10.*, 11.*, 12.*]
         exclude:
-          - laravel: 8.*
-            php: 8.2
           - laravel: 10.*
             php: 8.0
           - laravel: 11.*
@@ -47,3 +45,23 @@ jobs:
         composer update
     - name: Run tests
       run: vendor/bin/phpunit
+
+  docker:
+    runs-on: ubuntu-latest
+    needs: tests
+    if: github.event_name == 'push' || github.event_name == 'pull_request'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ github.repository }}:latest
