--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,7 @@
 		"php": "^8.0",
         "illuminate/database": "^10.0|^11.0|^12.0",
         "illuminate/support": "^10.0|^11.0|^12.0",
-        "illuminate/console": "^10.0|^11.0|^12.0",
-        "tmilos/scim-schema": "^0.1.0",
-        "tmilos/scim-filter-parser": "^1.3"
+        "illuminate/console": "^10.0|^11.0|^12.0"
     },
     "classmap": [
         "database/migrations"
